[project]
name = "wodimask"
version = "0.1.0"
description = "Network identity policy engine"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "Apache 2.0" }

authors = [
  { name = "Caleb Wodi", email = "calebwodi33@gmail.com" }
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"